RABC/5allowall.yaml
# Allow all traffic to pod if you lots of pods


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name:
  namespace:
spec:
  podSelector: {}  ## Pod 
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from: [] # allow all
  egress: 
    - to: {} # allow all 


...

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name:
  namespace:
spec:
  podSelector:
    matchLabels:
      app: frontend   ##### Specfic Pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from: [] # allow all
  egress: 
    - to: {} # allow all
