RABC/5denyall.yaml
# ✅ 4️⃣ Default NetworkPolicy (Zero Trust – Mandatory)

# 📌 This is CRITICAL in production
# By default → NO pod can talk to anything
# You must explicitly allow traffic
# Interview keyword: “Zero Trust Networking”


## Default Deny All Policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: dev
spec:
  podSelector: {}                  ## Applies to all Pods
  policyTypes:
  - Ingress                        ## Block all incoming traffic
  - Egress                         ## Block all outgoing traffic

  ingress: []   # Explicit deny   ### optional if want to add .. without add also deny all work
  egress: []    # Explicit deny   ### optional if want to add .. without add also deny all work
