RABC/7egress.yaml
## Allow Egress to Specific Database IP
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-db
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.10/32         ## Allow connection to this IP only
    ports:
    - protocol: TCP
      port: 3306                   ## MySQL port

  - to:
    - podSelector:
        matchLabels:
          app: mysql
    ports:
    - protocol: TCP
      port: 3306

  - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system  # 👉 Allow traffic to all pods inside kube-system namespace
    ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53

  - to:                                     #### NAMESPACE + PODSELECTOR
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
